# brilt

./: Cargo.toml  README.md  schema.egg
.github/workflows/: rust.yml
src/: annotation.rs  cfg.rs  graph.rs  lib.rs  main.rs  restructure.rs  rvsdg.rs
tests/: call.bril  early_return.bril  rec.bril  test_linear.bril
tests/no-run/: self_loop.bril
