[package]
name = "brilt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"bril-rs" = { git = "https://github.com/sampsyo/bril.git" }
petgraph = "0.6.4"
serde_json = "1.0.106"

[dev-dependencies]
glob = "0.3.1"
