[package]
name = "brilt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
"bril-rs" = { git = "https://github.com/sampsyo/bril.git" }
egglog = { git = "https://github.com/egraphs-good/egglog.git", version = "0.1.0" }
petgraph = "0.6.4"
serde_json = "1.0.106"

[dev-dependencies]
glob = "0.3.1"
